# Knight_tour_Warnsdorf

./: CMakeLists.txt  Interface.cpp  Interfejs.cpp  Knight.cpp  Rycerz.cpp  Warnsdorff.cpp  main.cpp  untitled1.pro
Naglowki/: Interface.h  Interfejs.h  Knight.h  Rycerz.h  Warnsdorff.h
